test/style/errors/cssfilenotfound.lzx
<!-- Copyright 2006 Laszlo Systems --> 
<canvas >
    <stylesheet src="idontexist.css" />
<text text="this file tests what happens when we reference a css file that doesn't exist" />
</canvas>